--- a/custom/css/style1.css
+++ b/custom/css/style1.css
@@ -22,11 +22,11 @@ body:before {
     z-index: 2;
   }
 }
-@media screen and (min-width: 768px) {
+/*@media screen and (min-width: 768px) {
 .container{
 	padding-left: 8% !important;
 }
-}
+}*/
 @media screen and (min-width: 420px) and (max-width: 767px) {
   body:before {
     z-index: 3;
@@ -629,6 +629,7 @@ li.food_item{background-color:rgb(239,231,215); padding-bottom: 0em !important; 
 @media (min-width: 992px) {
 .categories{
 width: 19% !important;
+  margin-left: 1% !important;
 }
 .nav-tabs.nav-justified {
   width: 101% !important;
@@ -636,17 +637,20 @@ width: 19% !important;
 }
 @media (min-width: 1050px) {
 .categories{
-width: 21% !important;
+width: 20% !important;
+    
 }
 }
 @media (min-width: 1100px) {
 .categories{
 width: 22% !important;
+ 
 }
 }
 @media (min-width: 1150px) {
 .categories{
 width: 13% !important;
+  margin-left: 6% !important;
 }
 }
 .round-button {
