--- a/custom/css/style1.css
+++ b/custom/css/style1.css
@@ -30,6 +30,8 @@ body:before {
 	padding-left: 8% !important;
 }
 }*/
+
+ 
 @media screen and (min-width: 420px) and (max-width: 767px) {
   body:before {
     z-index: 3;
@@ -38,9 +40,18 @@ body:before {
 .search .form-control-feedback {
   margin-right: 20% !important;
 }
+.search.form-group {
+
+  margin-left: 50% !important;
+}
 .form-control {
     width: 80% !important;
     margin-top: -45px !important;
+}
+    
+.hiddenInTab{
+    display: none;
+    
 }
 }
 
@@ -49,6 +60,14 @@ body:before {
     content: 'SmallMobile';
     z-index: 4;
   }
+.searchInMobile{
+     float: right;
+  margin-top: -24px;
+  margin-right: 64px;
+}
+.hiddeninMobile{
+    display: none;
+}
 }
 @font-face {
     font-family: san-Light;
@@ -479,12 +498,16 @@ font-family: segoe-Light;
   margin-top: -9%;
 
 }
+    .sort li {
+        width:50% !important;
+    }
+    .summary {
+        text-align: justify;
+    }
 .search.form-group {
     margin-left: 0%;
 }
-.itemList ul{
-    margin-top: 35px;
-}
+
 }
 @media screen and (max-width: 320px) {
     .media-right {
@@ -728,8 +751,10 @@ width: 22% !important;
 	}
 	.hlink{
 		color: blue;
-		/*text-decoration: underline;*/
 		cursor: pointer;
+	}
+.media-heading img{
+	height: 15px;
 	}
 
 a.list-group-item {
@@ -825,7 +850,7 @@ padding-left: 30px;
 }
 .sort li {
   float: left;
-  padding: 5px 5px 5px 5px;
+  padding-top: 3px;
   text-align: center;
   height: 31px;
   width: 25%;
@@ -845,4 +870,7 @@ padding-left: 30px;
   padding: 5px;
   padding-top: 0px;
   padding-bottom: 0px;
+}
+.sort li a img {
+  height: 15px; 
 }
