--- a/custom/css/style1.css
+++ b/custom/css/style1.css
@@ -1,3 +1,14 @@
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url(../../custom/images/Preloader_8.gif) center no-repeat #fff;
+}
 .glyphicon-edit.itemPanel{
 	margin-top: 15px;
   padding-right: 40px;
@@ -169,7 +180,7 @@ body:before {
   margin: -9px;
   border-bottom-left-radius: 40px;
   border-top-right-radius: 40px;
-    background: url("../images/bg_image1.png");
+    background: url("../../custom/images/bg_image1.jpg");
     background-size: 100%;
 }
 	
@@ -183,7 +194,7 @@ body:before {
 
 /*Index Screen Style*/
 body{
-    background-image: url("../../custom/images/bg_image1.JPG");
+    background-image: url("../../custom/images/bg_image1.jpg");
 	background-repeat: repeat-y;
     background-size: 100%;
      min-height: 500px;
@@ -879,4 +890,7 @@ width: 22% !important;
 
   width: 13% !important;
   margin-left: 6% !important;
+}
+#checkout{
+	cursor: pointer;
 }
